--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </div>
         <div class="col-lg-4 order-1 order-lg-2 hero-img" data-aos="zoom-out" data-aos-delay="300">
           <!-- <img src="assets/img/Snapshot.webp" class="img-fluid animated d-none d-lg-block" alt=""> -->
-          <iframe class="animated rounded-4" src="https://www.youtube.com/embed/fzx5kKlwRAI?si=9xcUZAW6gOyq3qYO&amp;start=7"
+          <iframe class="animated rounded-4" src="https://www.youtube.com/embed/amcfp4OT33o?si=GUzyiVtVB3nmVuhk"
             title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen></iframe>
